Update gradle.properties - testing auto create and auto merge after disabling auto-merge from settings

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,10 @@ android.useAndroidX=true
 # Enables namespacing of each's R class so that its R class inclu
 android.nonTransitiveRClass=false
 
+
+# adding lines in between to change line number of version_name
+
+
 VERSION_NAME=0.1.21-alpha
 
 
